# LangChain-DeepAgent

./: .env.example  .gitignore  Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml  requirements.txt  test_agent.py  test_full_system.py  test_mcp.py  verify_phase1.py
docs/: deployment.md
examples/: __init__.py  highbyte_example.py  run_examples.py
examples/scenarios/: predictive_maintenance.py  production_monitoring.py
src/: __init__.py  main.py
src/agents/: __init__.py  orchestrator.py
src/agents/prompts/: __init__.py  orchestrator_prompt.py
src/config/: __init__.py  settings.py  subagent_configs.py
src/mcp/: __init__.py  client.py
src/mcp/servers/: __init__.py  base_server.py  highbyte_mock.py  highbyte_server.py  sqlserver_mock.py  teradata_mock.py
src/rag/: __init__.py  chromadb_manager.py  document_loader.py  retrieval.py
src/utils/: __init__.py  langsmith_setup.py  logging_config.py
tests/: __init__.py  test_agent.py  test_full_system.py  test_highbyte_server.py  test_mcp.py  test_rag.py
tests/data/: cnc_guide.md
tests/integration/: test_pipeline.py
